plugins {
    id('java')
}

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

java {
    withSourcesJar()
    withJavadocJar()
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

javadoc {
    (options as StandardJavadocDocletOptions).addBooleanOption('html5', true)
}

repositories {
    mavenCentral()
}

dependencies {
    implementation(project(":scheduler-api"))
    implementation(group: 'com.github.docker-java', name: 'docker-java-core', version: '3.3.4')
    implementation(group: 'com.github.docker-java', name: 'docker-java-transport-httpclient5', version: '3.3.4')
}

jar {
    archiveBaseName = 'ignishpc-scheduler-docker'
    version = file("../VERSION").text.trim()
    manifest {
        attributes("Implementation-Title": archiveBaseName,
                "Implementation-Version": version)
    }
}
